--- a/contact_us.html
+++ b/contact_us.html
@@ -20,8 +20,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="/assets/css/contact_us.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/contact_us.css">
 
 </head>
 
@@ -40,10 +40,10 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav align-items-center">
                         <li class="nav-item">
-                            <a class="nav-link animate__animated animate__fadeIn" href="/index.html">HOME</a>
+                            <a class="nav-link animate__animated animate__fadeIn" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link animate__animated animate__fadeIn" href="/pages/about.html">ABOUT</a>
+                            <a class="nav-link animate__animated animate__fadeIn" href="about.html">ABOUT</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link animate__animated animate__fadeIn" href="#" role="button"
@@ -52,22 +52,22 @@
                                 <span class="material-icons dropdown-icon">expand_more</span>
                             </a>
                             <div class="dropdown-menu animate__animated animate__fadeIn">
-                                <a class="dropdown-item" href="/pages/country/regional.html">
+                                <a class="dropdown-item" href="country/regional.html">
                                     <h6 class="dropdown-header">REGIONAL</h6>
                                 </a>
-                                <a class="dropdown-item" href="/pages/country/malaysia.html">
+                                <a class="dropdown-item" href="country/malaysia.html">
                                     <img src="/assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon">
                                     MALAYSIA
                                 </a>
-                                <a class="dropdown-item" href="/pages/country/indonesia.html">
+                                <a class="dropdown-item" href="country/indonesia.html">
                                     <img src="/assets/image/home/flags/indonesia.png" alt="Indonesia" class="flag-icon">
                                     INDONESIA
                                 </a>
-                                <a class="dropdown-item" href="/pages/country/singapore.html">
+                                <a class="dropdown-item" href="country/singapore.html">
                                     <img src="/assets/image/home/flags/singapore.png" alt="Singapore" class="flag-icon">
                                     SINGAPORE
                                 </a>
-                                <a class="dropdown-item" href="/pages/country/thailand.html">
+                                <a class="dropdown-item" href="country/thailand.html">
                                     <img src="/assets/image/home/flags/thailand.png" alt="Thailand" class="flag-icon">
                                     THAILAND
                                 </a>
@@ -75,10 +75,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link animate__animated animate__fadeIn active"
-                                href="/pages/contact_us.html">CONTACT US</a>
+                                href="contact_us.html">CONTACT US</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link animate__animated animate__fadeIn" href="/pages/tc.html">T&C</a>
+                            <a class="nav-link animate__animated animate__fadeIn" href="tc.html">T&C</a>
                         </li>
                         <li class="nav-item ms-lg-3 d-none d-lg-block">
                             <a class="nav-link register-btn animate__animated animate__fadeIn" href="#">REGISTER</a>
