--- a/contact_us.html
+++ b/contact_us.html
@@ -56,19 +56,19 @@
                                     <h6 class="dropdown-header">REGIONAL</h6>
                                 </a>
                                 <a class="dropdown-item" href="country/malaysia.html">
-                                    <img src="/assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon">
+                                    <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon">
                                     MALAYSIA
                                 </a>
                                 <a class="dropdown-item" href="country/indonesia.html">
-                                    <img src="/assets/image/home/flags/indonesia.png" alt="Indonesia" class="flag-icon">
+                                    <img src="assets/image/home/flags/indonesia.png" alt="Indonesia" class="flag-icon">
                                     INDONESIA
                                 </a>
                                 <a class="dropdown-item" href="country/singapore.html">
-                                    <img src="/assets/image/home/flags/singapore.png" alt="Singapore" class="flag-icon">
+                                    <img src="assets/image/home/flags/singapore.png" alt="Singapore" class="flag-icon">
                                     SINGAPORE
                                 </a>
                                 <a class="dropdown-item" href="country/thailand.html">
-                                    <img src="/assets/image/home/flags/thailand.png" alt="Thailand" class="flag-icon">
+                                    <img src="assets/image/home/flags/thailand.png" alt="Thailand" class="flag-icon">
                                     THAILAND
                                 </a>
                             </div>
@@ -99,7 +99,7 @@
             <div class="contact-list">
                 <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.1s;">
                     <div class="flag-container">
-                        <img src="/assets/image/home/flags/malaysia.png" alt="Malaysia Flag" class="country-flag">
+                        <img src="assets/image/home/flags/malaysia.png" alt="Malaysia Flag" class="country-flag">
                     </div>
                     <div class="contact-details">
                         <h3>Malaysia</h3>
@@ -112,7 +112,7 @@
 
                 <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.2s;">
                     <div class="flag-container">
-                        <img src="/assets/image/home/flags/indonesia.png" alt="Indonesia Flag" class="country-flag">
+                        <img src="assets/image/home/flags/indonesia.png" alt="Indonesia Flag" class="country-flag">
                     </div>
                     <div class="contact-details">
                         <h3>Indonesia</h3>
@@ -125,7 +125,7 @@
 
                 <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.3s;">
                     <div class="flag-container">
-                        <img src="/assets/image/home/flags/singapore.png" alt="Singapore Flag" class="country-flag">
+                        <img src="assets/image/home/flags/singapore.png" alt="Singapore Flag" class="country-flag">
                     </div>
                     <div class="contact-details">
                         <h3>Singapore</h3>
@@ -138,7 +138,7 @@
 
                 <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.4s;">
                     <div class="flag-container">
-                        <img src="/assets/image/home/flags/thailand.png" alt="Thailand Flag" class="country-flag">
+                        <img src="assets/image/home/flags/thailand.png" alt="Thailand Flag" class="country-flag">
                     </div>
                     <div class="contact-details">
                         <h3>Thailand</h3>
@@ -151,7 +151,7 @@
 
                 <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.5s;">
                     <div class="flag-container">
-                        <img src="/assets/image/home/flags/philippines.png" alt="Philippines Flag" class="country-flag">
+                        <img src="assets/image/home/flags/philippines.png" alt="Philippines Flag" class="country-flag">
                     </div>
                     <div class="contact-details">
                         <h3>Philippines</h3>
@@ -169,9 +169,9 @@
     </footer>
 
     <!-- Custom JS -->
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/index.js"></script>
-    <script src="/assets/js/scroll-animation.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/index.js"></script>
+    <script src="assets/js/scroll-animation.js"></script>
 
 </body>
 
