--- a/country/regional.html
+++ b/country/regional.html
@@ -56,19 +56,19 @@
                                     <h6 class="dropdown-header">REGIONAL</h6>
                                 </a>
                                 <a class="dropdown-item" href="malaysia.html">
-                                    <img src="/assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon">
+                                    <img src="../assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon">
                                     MALAYSIA
                                 </a>
                                 <a class="dropdown-item" href="indonesia.html">
-                                    <img src="/assets/image/home/flags/indonesia.png" alt="Indonesia" class="flag-icon">
+                                    <img src="../assets/image/home/flags/indonesia.png" alt="Indonesia" class="flag-icon">
                                     INDONESIA
                                 </a>
                                 <a class="dropdown-item" href="singapore.html">
-                                    <img src="/assets/image/home/flags/singapore.png" alt="Singapore" class="flag-icon">
+                                    <img src="../assets/image/home/flags/singapore.png" alt="Singapore" class="flag-icon">
                                     SINGAPORE
                                 </a>
                                 <a class="dropdown-item" href="thailand.html">
-                                    <img src="/assets/image/home/flags/thailand.png" alt="Thailand" class="flag-icon">
+                                    <img src="../assets/image/home/flags/thailand.png" alt="Thailand" class="flag-icon">
                                     THAILAND
                                 </a>
                             </div>
@@ -179,10 +179,10 @@
     </footer>
 
     <!-- Custom JS -->
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/index.js"></script>
-    <script src="/assets/js/scroll-animation.js"></script>
-    <script src="/assets/js/regional.js"></script>
+    <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/index.js"></script>
+    <script src="../assets/js/scroll-animation.js"></script>
+    <script src="../assets/js/regional.js"></script>
 
 </body>
 
