--- a/tc.html
+++ b/tc.html
@@ -56,19 +56,19 @@
                                     <h6 class="dropdown-header">REGIONAL</h6>
                                 </a>
                                 <a class="dropdown-item" href="country/malaysia.html">
-                                    <img src="/assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon">
+                                    <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon">
                                     MALAYSIA
                                 </a>
                                 <a class="dropdown-item" href="country/indonesia.html">
-                                    <img src="/assets/image/home/flags/indonesia.png" alt="Indonesia" class="flag-icon">
+                                    <img src="assets/image/home/flags/indonesia.png" alt="Indonesia" class="flag-icon">
                                     INDONESIA
                                 </a>
                                 <a class="dropdown-item" href="country/singapore.html">
-                                    <img src="/assets/image/home/flags/singapore.png" alt="Singapore" class="flag-icon">
+                                    <img src="assets/image/home/flags/singapore.png" alt="Singapore" class="flag-icon">
                                     SINGAPORE
                                 </a>
                                 <a class="dropdown-item" href="country/thailand.html">
-                                    <img src="/assets/image/home/flags/thailand.png" alt="Thailand" class="flag-icon">
+                                    <img src="assets/image/home/flags/thailand.png" alt="Thailand" class="flag-icon">
                                     THAILAND
                                 </a>
                             </div>
@@ -167,9 +167,9 @@
     </footer>
 
     <!-- Custom JS -->
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/index.js"></script>
-    <script src="/assets/js/scroll-animation.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/index.js"></script>
+    <script src="assets/js/scroll-animation.js"></script>
 
 </body>
 
