--- a/about.html
+++ b/about.html
@@ -21,7 +21,11 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/responsive/main/main_991.css">
+    <link rel="stylesheet" href="assets/css/responsive/main/main_768.css">
     <link rel="stylesheet" href="assets/css/about.css">
+    <link rel="stylesheet" href="assets/css/responsive/about/about_991.css">
+    <link rel="stylesheet" href="assets/css/responsive/about/about_768.css">
 
 </head>
 
@@ -31,7 +35,7 @@
         <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
             <div class="container">
                 <!-- Mobile Register Button -->
-                <a class="nav-link register-btn d-lg-none" href="#">REGISTER</a>
+                <a class="nav-link register-btn d-lg-none" href="https://sso.cgsi.com/aic/">REGISTER</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,8 +47,7 @@
                             <a class="nav-link animate__animated animate__fadeIn" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link animate__animated animate__fadeIn active"
-                                href="about.html">ABOUT</a>
+                            <a class="nav-link animate__animated animate__fadeIn active" href="about.html">ABOUT</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link animate__animated animate__fadeIn" href="#" role="button"
@@ -54,7 +57,9 @@
                             </a>
                             <div class="dropdown-menu animate__animated animate__fadeIn">
                                 <a class="dropdown-item" href="country/regional.html">
-                                    <h6 class="dropdown-header">REGIONAL</h6>
+                                    <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon"
+                                        style="visibility: hidden;">
+                                    REGIONAL
                                 </a>
                                 <a class="dropdown-item" href="country/malaysia.html">
                                     <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon">
@@ -82,7 +87,8 @@
                             <a class="nav-link animate__animated animate__fadeIn" href="tc.html">T&C</a>
                         </li>
                         <li class="nav-item ms-lg-3 d-none d-lg-block">
-                            <a class="nav-link register-btn animate__animated animate__fadeIn" href="#">REGISTER</a>
+                            <a class="nav-link register-btn animate__animated animate__fadeIn"
+                                href="https://sso.cgsi.com/aic/">REGISTER</a>
                         </li>
                     </ul>
                 </div>
@@ -148,9 +154,8 @@
                     </b>
                     <p>AIC is designed to recognise the best and bravest in sustainable investing: Build your knowledge
                         and hone your investment skills across a wide range of topics, and put them to practice through
-                        the demo trading account. [The ones who achieve the highest returns win!]</p>
-                    <div class="prize-amount">Win over $36,000+ in cash prizes!</div>
-                    <p class="mt-3">If you have what it takes to come up tops in both the Country and Regional
+                        the demo trading account. [The ones who achieve the highest returns win!]If you have what it
+                        takes to come up tops in both the Country and Regional
                         Challenges, you will bring home over $36,000++ in cash to kickstart your financial journey.</p>
                 </div>
             </div>
@@ -170,14 +175,12 @@
                     unique local stocks available across the selected markets. The top 3 participants [with the highest
                     returns] from each country will then advance to the Regional Challenge for an opportunity to be
                     crowned the overall winner.</p>
+                <br>
+                <p>Oh, and did we mention the total of S$36,000++ in cash that our winners stand to bring home? What are
+                    you waiting for? JOIN NOW!</p>
             </div>
 
-            <div class="join-now scroll-animation" data-animation="animate__fadeInUp">
-                <p>Oh, and did we mention the total of S$36,000++ in cash that our winners stand to bring home?<br>What
-                    are you waiting for?<br><b>JOIN NOW!</b></p>
-            </div>
-
-            <div class="table-responsive">
+            <div class="table-responsive d-none d-md-block">
                 <table class="criteria-table">
                     <tr class="scroll-animation" data-animation="animate__fadeInDown">
                         <th style="visibility: hidden;"></th>
@@ -211,24 +214,22 @@
                         <td class="scroll-animation" data-animation="animate__fadeIn" style="animation-delay: 0.4s;">
                             <div class="level-content">
                                 <ul class="criteria-list">
+                                    <!-- Country level criteria items -->
                                     <li class="scroll-animation" data-animation="animate__fadeInRight"
                                         style="animation-delay: 0.1s;">
-                                        <i class="material-icons percentage-icon">check_circle</i>
+                                        <i class="material-icons percentage-icon">cancel</i>
                                         <span class="percentage">40%&nbsp;</span>- P & L
                                     </li>
-                                    <li class="scroll-animation" data-animation="animate__fadeInRight"
-                                        style="animation-delay: 0.2s;">
-                                        <i class="material-icons percentage-icon">check_circle</i>
+                                    <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                        <i class="material-icons percentage-icon">cancel</i>
                                         <span class="percentage">20%&nbsp;</span>- Completion of E-Learning
                                     </li>
-                                    <li class="scroll-animation" data-animation="animate__fadeInRight"
-                                        style="animation-delay: 0.3s;">
-                                        <i class="material-icons percentage-icon">check_circle</i>
+                                    <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                        <i class="material-icons percentage-icon">cancel</i>
                                         <span class="percentage">20%&nbsp;</span>- Risk Management
                                     </li>
-                                    <li class="scroll-animation" data-animation="animate__fadeInRight"
-                                        style="animation-delay: 0.4s;">
-                                        <i class="material-icons percentage-icon">check_circle</i>
+                                    <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                        <i class="material-icons percentage-icon">cancel</i>
                                         <span class="percentage">20%&nbsp;</span>- ESG Metrics
                                     </li>
                                 </ul>
@@ -237,24 +238,22 @@
                         <td class="scroll-animation" data-animation="animate__fadeIn" style="animation-delay: 0.6s;">
                             <div class="level-content">
                                 <ul class="criteria-list">
+                                    <!-- Regional level criteria items -->
                                     <li class="scroll-animation" data-animation="animate__fadeInRight"
                                         style="animation-delay: 0.1s;">
-                                        <i class="material-icons percentage-icon">check_circle</i>
+                                        <i class="material-icons percentage-icon">cancel</i>
                                         <span class="percentage">45%&nbsp;</span>- Presentation Quality
                                     </li>
-                                    <li class="scroll-animation" data-animation="animate__fadeInRight"
-                                        style="animation-delay: 0.2s;">
-                                        <i class="material-icons percentage-icon">check_circle</i>
+                                    <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                        <i class="material-icons percentage-icon">cancel</i>
                                         <span class="percentage">20%&nbsp;</span>- ESG Metrics
                                     </li>
-                                    <li class="scroll-animation" data-animation="animate__fadeInRight"
-                                        style="animation-delay: 0.3s;">
-                                        <i class="material-icons percentage-icon">check_circle</i>
+                                    <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                        <i class="material-icons percentage-icon">cancel</i>
                                         <span class="percentage">15%&nbsp;</span>- Risk Management
                                     </li>
-                                    <li class="scroll-animation" data-animation="animate__fadeInRight"
-                                        style="animation-delay: 0.4s;">
-                                        <i class="material-icons percentage-icon">check_circle</i>
+                                    <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                        <i class="material-icons percentage-icon">cancel</i>
                                         <span class="percentage">20%&nbsp;</span>- Portfolio Performance
                                     </li>
                                 </ul>
@@ -262,6 +261,107 @@
                         </td>
                     </tr>
                 </table>
+            </div>
+
+            <!-- Mobile tables (visible only on small screens) -->
+            <div class="d-md-none">
+                <!-- Country Level Table -->
+                <div class="mobile-table-container mb-4">
+                    <h3 class="mobile-table-title scroll-animation" data-animation="animate__fadeInDown">COUNTRY LEVEL
+                    </h3>
+                    <table class="criteria-table mobile-criteria-table">
+                        <tr>
+                            <td class="scroll-animation" data-animation="animate__fadeInLeft">
+                                <div class="challenge-content">
+                                    <span>Challenge</span>
+                                </div>
+                            </td>
+                            <td class="scroll-animation" data-animation="animate__fadeIn">
+                                <div class="level-content">
+                                    <p class="challenge-desc">Stock Trading (min. of 3 unique local stocks)</p>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="scroll-animation" data-animation="animate__fadeInLeft">
+                                <div class="challenge-content">
+                                    <span>Judging Criteria</span>
+                                </div>
+                            </td>
+                            <td class="scroll-animation" data-animation="animate__fadeIn">
+                                <div class="level-content">
+                                    <ul class="criteria-list">
+                                        <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                            <i class="material-icons percentage-icon">cancel</i>
+                                            <span class="percentage">40%&nbsp;</span>- P & L
+                                        </li>
+                                        <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                            <i class="material-icons percentage-icon">cancel</i>
+                                            <span class="percentage">20%&nbsp;</span>- Completion of E-Learning
+                                        </li>
+                                        <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                            <i class="material-icons percentage-icon">cancel</i>
+                                            <span class="percentage">20%&nbsp;</span>- Risk Management
+                                        </li>
+                                        <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                            <i class="material-icons percentage-icon">cancel</i>
+                                            <span class="percentage">20%&nbsp;</span>- ESG Metrics
+                                        </li>
+                                    </ul>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+
+                <!-- Regional Level Table -->
+                <div class="mobile-table-container">
+                    <h3 class="mobile-table-title scroll-animation" data-animation="animate__fadeInDown">REGIONAL LEVEL
+                    </h3>
+                    <table class="criteria-table mobile-criteria-table">
+                        <tr>
+                            <td class="scroll-animation" data-animation="animate__fadeInLeft">
+                                <div class="challenge-content">
+                                    <span>Challenge</span>
+                                </div>
+                            </td>
+                            <td class="scroll-animation" data-animation="animate__fadeIn">
+                                <div class="level-content">
+                                    <p class="challenge-desc">Formal representation of stock trading experience</p>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="scroll-animation" data-animation="animate__fadeInLeft">
+                                <div class="challenge-content">
+                                    <span>Judging Criteria</span>
+                                </div>
+                            </td>
+                            <td class="scroll-animation" data-animation="animate__fadeIn">
+                                <div class="level-content">
+                                    <ul class="criteria-list">
+                                        <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                            <i class="material-icons percentage-icon">cancel</i>
+                                            <span class="percentage">45%&nbsp;</span>- Presentation Quality
+                                        </li>
+                                        <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                            <i class="material-icons percentage-icon">cancel</i>
+                                            <span class="percentage">20%&nbsp;</span>- ESG Metrics
+                                        </li>
+                                        <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                            <i class="material-icons percentage-icon">cancel</i>
+                                            <span class="percentage">15%&nbsp;</span>- Risk Management
+                                        </li>
+                                        <li class="scroll-animation" data-animation="animate__fadeInRight">
+                                            <i class="material-icons percentage-icon">cancel</i>
+                                            <span class="percentage">20%&nbsp;</span>- Portfolio Performance
+                                        </li>
+                                    </ul>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
 
             <div class="criteria-button-container text-center">
@@ -341,8 +441,8 @@
             </div>
 
             <div class="guide-cta text-center">
-                <a href="assets/doc/AIC User Guide_FINAL.pdf" target="_blank"
-                    class="btn guide-btn scroll-animation" data-animation="animate__fadeInUp">
+                <a href="assets/doc/AIC User Guide_FINAL.pdf" target="_blank" class="btn guide-btn scroll-animation"
+                    data-animation="animate__fadeInUp">
                     <span>TRADING PLATFORM GUIDE</span>
                 </a>
             </div>
@@ -356,7 +456,7 @@
     </footer>
 
     <!-- Custom JS -->
-    <script src="assets/js/main.js"></script>
+    
     <script src="assets/js/index.js"></script>
     <script src="assets/js/scroll-animation.js"></script>
 
