--- a/contact_us.html
+++ b/contact_us.html
@@ -21,6 +21,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/responsive/main/main_991.css">
+    <link rel="stylesheet" href="assets/css/responsive/main/main_768.css">
     <link rel="stylesheet" href="assets/css/contact_us.css">
 
 </head>
@@ -31,7 +33,7 @@
         <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
             <div class="container">
                 <!-- Mobile Register Button -->
-                <a class="nav-link register-btn d-lg-none" href="#">REGISTER</a>
+                <a class="nav-link register-btn d-lg-none" href="https://sso.cgsi.com/aic/">REGISTER</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +55,9 @@
                             </a>
                             <div class="dropdown-menu animate__animated animate__fadeIn">
                                 <a class="dropdown-item" href="country/regional.html">
-                                    <h6 class="dropdown-header">REGIONAL</h6>
+                                    <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon"
+                                        style="visibility: hidden;">
+                                    REGIONAL
                                 </a>
                                 <a class="dropdown-item" href="country/malaysia.html">
                                     <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon">
@@ -74,14 +78,15 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link animate__animated animate__fadeIn active"
-                                href="contact_us.html">CONTACT US</a>
+                            <a class="nav-link animate__animated animate__fadeIn active" href="contact_us.html">CONTACT
+                                US</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link animate__animated animate__fadeIn" href="tc.html">T&C</a>
                         </li>
                         <li class="nav-item ms-lg-3 d-none d-lg-block">
-                            <a class="nav-link register-btn animate__animated animate__fadeIn" href="#">REGISTER</a>
+                            <a class="nav-link register-btn animate__animated animate__fadeIn"
+                                href="https://sso.cgsi.com/aic/">REGISTER</a>
                         </li>
                     </ul>
                 </div>
@@ -97,7 +102,8 @@
             </div>
 
             <div class="contact-list">
-                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.1s;">
+                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
+                    style="animation-delay: 0.1s;">
                     <div class="flag-container">
                         <img src="assets/image/home/flags/malaysia.png" alt="Malaysia Flag" class="country-flag">
                     </div>
@@ -110,7 +116,8 @@
                     </div>
                 </div>
 
-                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.2s;">
+                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
+                    style="animation-delay: 0.2s;">
                     <div class="flag-container">
                         <img src="assets/image/home/flags/indonesia.png" alt="Indonesia Flag" class="country-flag">
                     </div>
@@ -123,7 +130,8 @@
                     </div>
                 </div>
 
-                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.3s;">
+                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
+                    style="animation-delay: 0.3s;">
                     <div class="flag-container">
                         <img src="assets/image/home/flags/singapore.png" alt="Singapore Flag" class="country-flag">
                     </div>
@@ -136,7 +144,8 @@
                     </div>
                 </div>
 
-                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.4s;">
+                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
+                    style="animation-delay: 0.4s;">
                     <div class="flag-container">
                         <img src="assets/image/home/flags/thailand.png" alt="Thailand Flag" class="country-flag">
                     </div>
@@ -149,7 +158,8 @@
                     </div>
                 </div>
 
-                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.5s;">
+                <div class="contact-item scroll-animation" data-animation="animate__fadeInLeft"
+                    style="animation-delay: 0.5s;">
                     <div class="flag-container">
                         <img src="assets/image/home/flags/philippines.png" alt="Philippines Flag" class="country-flag">
                     </div>
@@ -169,7 +179,7 @@
     </footer>
 
     <!-- Custom JS -->
-    <script src="assets/js/main.js"></script>
+    
     <script src="assets/js/index.js"></script>
     <script src="assets/js/scroll-animation.js"></script>
 
