--- a/country/malaysia.html
+++ b/country/malaysia.html
@@ -21,6 +21,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/responsive/main/main_991.css">
+    <link rel="stylesheet" href="../assets/css/responsive/main/main_768.css">
     <link rel="stylesheet" href="../assets/css/country.css">
 
 </head>
@@ -31,7 +33,7 @@
         <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
             <div class="container">
                 <!-- Mobile Register Button -->
-                <a class="nav-link register-btn d-lg-none" href="#">REGISTER</a>
+                <a class="nav-link register-btn d-lg-none" href="https://sso.cgsi.com/aic/">REGISTER</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,18 +55,22 @@
                             </a>
                             <div class="dropdown-menu animate__animated animate__fadeIn active">
                                 <a class="dropdown-item" href="regional.html">
-                                    <h6 class="dropdown-header">REGIONAL</h6>
+                                    <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon"
+                                        style="visibility: hidden;">
+                                    REGIONAL
                                 </a>
                                 <a class="dropdown-item" href="malaysia.html">
                                     <img src="../assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon">
                                     MALAYSIA
                                 </a>
                                 <a class="dropdown-item" href="indonesia.html">
-                                    <img src="../assets/image/home/flags/indonesia.png" alt="Indonesia" class="flag-icon">
+                                    <img src="../assets/image/home/flags/indonesia.png" alt="Indonesia"
+                                        class="flag-icon">
                                     INDONESIA
                                 </a>
                                 <a class="dropdown-item" href="singapore.html">
-                                    <img src="../assets/image/home/flags/singapore.png" alt="Singapore" class="flag-icon">
+                                    <img src="../assets/image/home/flags/singapore.png" alt="Singapore"
+                                        class="flag-icon">
                                     SINGAPORE
                                 </a>
                                 <a class="dropdown-item" href="thailand.html">
@@ -81,7 +87,8 @@
                             <a class="nav-link animate__animated animate__fadeIn" href="../tc.html">T&C</a>
                         </li>
                         <li class="nav-item ms-lg-3 d-none d-lg-block">
-                            <a class="nav-link register-btn animate__animated animate__fadeIn" href="#">REGISTER</a>
+                            <a class="nav-link register-btn animate__animated animate__fadeIn"
+                                href="https://sso.cgsi.com/aic/">REGISTER</a>
                         </li>
                     </ul>
                 </div>
