--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/responsive/main/main_991.css">
+    <link rel="stylesheet" href="assets/css/responsive/main/main_768.css">
     <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/responsive/index/index_991.css">
+    <link rel="stylesheet" href="assets/css/responsive/index/index_768.css">
 
 </head>
 
@@ -31,7 +35,7 @@
         <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
             <div class="container">
                 <!-- Mobile Register Button -->
-                <a class="nav-link register-btn d-lg-none" href="#">REGISTER</a>
+                <a class="nav-link register-btn d-lg-none" href="https://sso.cgsi.com/aic/">REGISTER</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +57,8 @@
                             </a>
                             <div class="dropdown-menu animate__animated animate__fadeIn">
                                 <a class="dropdown-item" href="country/regional.html">
-                                    <h6 class="dropdown-header">REGIONAL</h6>
+                                    <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon" style="visibility: hidden;">
+                                    REGIONAL
                                 </a>
                                 <a class="dropdown-item" href="country/malaysia.html">
                                     <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon">
@@ -79,8 +84,8 @@
                         <li class="nav-item">
                             <a class="nav-link animate__animated animate__fadeIn" href="tc.html">T&C</a>
                         </li>
-                        <li class="nav-item ms-lg-3 d-none d-lg-block">
-                            <a class="nav-link register-btn animate__animated animate__fadeIn" href="#">REGISTER</a>
+                        <li class="nav-item d-none d-lg-block">
+                            <a class="nav-link register-btn animate__animated animate__fadeIn" href="https://sso.cgsi.com/aic/">REGISTER</a>
                         </li>
                     </ul>
                 </div>
@@ -102,7 +107,7 @@
 
     <section class="partner-section">
         <div class="container">
-            <h2 class="scroll-animation" data-animation="animate__fadeInUp">Our Supporting Partners</h2>
+            <h2 class="scroll-animation" data-animation="animate__fadeInUp">Our Supporting Partners:</h2>
             <div class="partners-grid mt-5">
                 <div class="row align-items-start g-4">
                     <!-- ... partner items ... -->
@@ -113,12 +118,11 @@
 
     <footer class="footer">
         <div class="container text-center">
-            <p>Copyrights © 2025 All Rights Reserved.</p>
+            <p>Copyrights <span class="material-icons" style="font-size: 0.7rem; vertical-align: middle;">copyright</span> 2025 All Rights Reserved.</p>
         </div>
     </footer>
 
-    <!-- Custom JS -->
-    <script src="assets/js/main.js"></script>
+    <!-- Custom JS -->    
     <script src="assets/js/index.js"></script>
     <script src="assets/js/scroll-animation.js"></script>
 
