--- a/country/regional.html
+++ b/country/regional.html
@@ -101,22 +101,22 @@
             </div>
 
             <table class="prizes-table">
-                <tr class="table-header scroll-animation" data-animation="animate__fadeInUp">
+                <tr class="table-header scroll-animation">
                     <td colspan="2">(Regional Level)</td>
                 </tr>
-                <tr class="scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.1s;">
+                <tr>
                     <td>Winner</td>
                     <td>SGD 20,000</td>
                 </tr>
-                <tr class="scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.2s;">
+                <tr>
                     <td>1st Runner-up</td>
                     <td>SGD 10,000</td>
                 </tr>
-                <tr class="scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.3s;">
+                <tr>
                     <td>2nd Runner-up</td>
                     <td>SGD 5,000</td>
                 </tr>
-                <tr class="scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.4s;">
+                <tr>
                     <td>4th Place</td>
                     <td>SGD 1,000</td>
                 </tr>
@@ -131,28 +131,28 @@
             </div>
 
             <table class="champions-table">
-                <tr class="scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.1s;">
+                <tr>
                     <td>Winner</td>
                     <td>
                         <div class="winner-name">Muhammad Zulfakar Aiman Bin Zulkarnain</div>
                         <div class="university">Universiti Teknologi MARA, Segamat Campus</div>
                     </td>
                 </tr>
-                <tr class="scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.2s;">
+                <tr>
                     <td>1st Runner-up</td>
                     <td>
                         <div class="winner-name">Kansorn Kanpinit</div>
                         <div class="university">Mahidol University</div>
                     </td>
                 </tr>
-                <tr class="scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.3s;">
+                <tr>
                     <td>2nd Runner-up</td>
                     <td>
                         <div class="winner-name">Reynald Hartanto Gunawan</div>
                         <div class="university">Universitas Kristen Petra</div>
                     </td>
                 </tr>
-                <tr class="scroll-animation" data-animation="animate__fadeInLeft" style="animation-delay: 0.4s;">
+                <tr>
                     <td>4th Place</td>
                     <td>
                         <div class="winner-name">Ray Tng</div>
